# Experimenting

./: NOTES.py  README.md  docker-compose.yaml  pyproject.toml
TotallyLit/: __init__.py  util.py
TotallyLit/app/: __init__.py  info.py
TotallyLit/impl/: __app.py
TotallyLit/layout/: header.py
examples/HelloStreamlit/: app.py  pyproject.toml
examples/HelloStreamlit/tests/: first_test.py
examples/JustLayout/: app.py  pyproject.toml
examples/JustLayout/.streamlit/: config.toml
examples/JustLayout/views/layout/: footer.py  header.py
extensions/totallylit-testing/: pyproject.toml
extensions/totallylit-testing/totallylit/extensions/testing/: __init__.py
totallylit/: __init__.py  __init__.pyi
totallylit/api/memory/: MemoryStoreBase.py  __init__.py
totallylit/api/services/: ServiceRegistry.py  __init__.py
totallylit/app/: __init__.py  app.py  app_and_page.py  context.py  page.py
totallylit/components/: __init__.py  page_list.py
totallylit/decorators/: __init__.py  app.py  page.py
totallylit/extensions/bar/: __init__.py
totallylit/extensions/foo/: __init__.py
totallylit/impl/: __init__.py  __page.py  app.py  context.py  page.py
totallylit/layout/: footer.py  header.py
totallylit/memoryx/: MemoryServiceRegistry.py  __init__.py
totallylit/util/: __init__.py  get_calling_filename.py  get_calling_stackframe.py
totallylitx/decorators/: page.py
totallylitx/layout/: footer.py  layout.py
