[tool.poetry]
name = "totallylit"
version = "0.0.1"
description = "TotallyLit is a web framework for Streamlit"
authors = ["Mrowr Purr <mrowr.purr@gmail.com>"]
license = "0BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
