[tool.poetry]
name = "totallylit"
version = "0.0.1"
description = "TotallyLit is a web framework for Streamlit"
authors = ["Mrowr Purr <mrowr.purr@gmail.com>"]
license = "0BSD"
readme = "README.md"
packages = [{include = "totallylit"}]
exclude = ["tests/**/*", "examples/**/*", "Resources/**/*", "extensions/**/*"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"


[tool.poetry.group.localsession.dependencies]
streamlit-javascript = "^0.1.5"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

