[tool.poetry]
name = "totallylit-example-hellostreamlit"
version = "0.0.1"
description = "Example application just to get pytest/playwright working with regular Streamlit"
authors = ["Mrowr Purr <mrowr.purr@gmail.com>"]
license = "0BSD"
readme = "README.md"
packages = [{include = "totallylit_example_hellostreamlit"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"


[tool.poetry.group.dev.dependencies]


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
playwright = "^1.36.0"
pytest-playwright = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
