[tool.poetry]
name = "totallylit-example-justlayout"
version = "0.0.1"
description = "Example application showing how to customize header/footer/layout"
authors = ["Mrowr Purr <mrowr.purr@gmail.com>"]
license = "0BSD"
readme = "README.md"
packages = [{include = "totallylit_example_justlayout"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
totallylit = {path = "../..", develop = true}
totallylit-testing = {path = "../../extensions/totallylit-testing", develop = true}

[tool.poe.tasks]
web = "streamlit run app.py --server.headless true --server.address localhost"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.21.1"


[tool.poetry.group.localsession.dependencies]
streamlit-javascript = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
