[tool.poetry]
name = "totallylit-testing"
version = "1.2.3"
description = "The description of testing"
authors = ["Mrowr Purr <mrowr.purr@gmail.com>"]
license = "0BSD"
readme = "README.md"
packages = [{include = "totallylit"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
